// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildFixPrPrompt > renders the authored clause when playwright.authored is set 1`] = `
"## Step 0: rebase onto \`origin/main\` (do this FIRST, before any feedback work)

Bring \`KAN-23\` up to date before applying review feedback:

\`\`\`
git fetch origin main
git rebase origin/main
\`\`\`

If the rebase is clean (no conflicts, or already up-to-date), continue to the feedback section below — Step 0 was a silent no-op.

If the rebase produces conflicts, follow these rules before going any further:

- Read each conflicting file. Use \`git log\` and \`git show\` if needed to understand both sides' intent. Discover the affected files via \`git status\`.
- Resolve each conflict preserving both sides' intent where they don't directly contradict.
- After resolving a file: \`git add <file>\`.
- When all conflicts in the current rebase step are resolved: \`git rebase --continue\`. Loop until the rebase finishes.
- Run \`npm run lint\`, \`npm run typecheck\`, \`npm run test:run\` — ALL must pass.
- If you are not confident in a resolution: \`git rebase --abort\`, document the blocker in \`docs/tickets/KAN-23.md\` "Open questions", and exit WITHOUT applying the review feedback.
- **If you resolved conflicts during this run, DO NOT push at the end** even if everything passes. The human must inspect the rebase resolution commits before they reach origin. After your feedback fixes are committed and verified, print exactly one line and exit: \`Rebase resolution + feedback ready for inspection — run 'git push --force-with-lease origin KAN-23' once you've reviewed.\`

## Step 0.5: bring up the environment (do this AFTER Step 0 succeeds)

Now that the source is current with \`origin/main\`, bring up the docker stack and any browser dependencies:

\`\`\`
docker compose up --build --wait
\`\`\`

If \`docker compose up\` fails for environmental reasons (host docker daemon down, port collision with another stack, missing CLI tools) — i.e., a failure that rebasing would not have fixed — abort with a clear message: document the blocker in \`docs/tickets/KAN-23.md\` "Open questions" and exit WITHOUT applying the review feedback. Do not push.

If \`docker compose\` itself returns a permission error — typically \`/var/run/docker.sock\` denied — that's a missing \`excludedCommands\` entry; see \`docs/plans/sandbox-limitations.md\`. Abort and ask the user to add the entry rather than trying to write the settings.json yourself.

**Do not reset the worktree or use any "hard" reset command** — those wipe in-progress work.

---

Code review feedback on the work you have already pushed for KAN-23.
Source: stdin.

---

fix it

---

## Skills

- **\`superpowers:test-driven-development\`** — for every feedback item that requires implementation work.
- **\`superpowers:verification-before-completion\`** — before pushing.
- **\`superpowers:systematic-debugging\`** — when something fails unexpectedly.
- **\`superpowers:requesting-code-review\`** — before pushing.


## Playwright e2e in this worktree

Crew has prepared this worktree for Playwright runs:

- The application stack is running at **https://localhost:8443**.
- Chromium is installed (browser binary + system libs). \`process.env.CREW_APP_URL\` is set to the app URL.
- This project authors Playwright tests under **tests/e2e/** runnable via \`npm run test:e2e\`. If your fix touches a user-facing flow with regression value, ensure the relevant tests pass before pushing.

**Two crew-managed concerns — do not duplicate:**

- **Do not run \`npm run docker:up\`.** The stack is already up.
- **Do not run \`npx playwright install\`.** Chromium is already installed.

If \`npm run test:e2e\` (or the project's equivalent) reports missing browsers, missing system libs, or "no app to test", surface the failure in your fix description and stop — that's a crew-setup gap, not your fault.


## Sandboxed-curl is misleading

Your Bash tool runs in a sandbox with its own loopback, isolated from the host's. Direct \`curl\` / \`wget\` / Node \`fetch\` calls from your shell to **https://localhost:8443** will always return \`ECONNREFUSED\` — that is **not** evidence the stack is down. Crew has whitelisted \`npm run test:e2e\` to run un-sandboxed, and those are the only valid reachability tests for the docker stack.

If \`npm run bruno:smoke\` succeeds, that confirms the daemon is up — but it says nothing about the worktree app port. If \`npm run test:e2e\` fails with \`ECONNREFUSED\`, that's a real signal: the docker stack is not serving at the expected port. Investigate \`/tmp/crew-docker-KAN-23.log\` and consider running \`docker compose up --build --wait\` from the worktree to bring the stack back up.

## Excluded-command matching is form-sensitive

Crew's whitelisted commands (\`npm run test:e2e\`) match \`<repo>/.claude/settings.json\`'s \`excludedCommands\` entries by glob. Entries use the form \`command*\` (e.g. \`npm run test:e2e*\`) — a leading-substring match where \`*\` accepts zero-or-more trailing chars. **Wrappers that prepend other commands break the match,** in which case the command runs sandboxed and won't reach host loopback even though it looks like it should.

To stay matched:

- **Run the bare command:** \`npm run test:e2e\` (not \`cd packages/dashboard && npm run test:e2e\`).
- **The \`--workspace=crew-dashboard\` flag is covered by the glob** — \`command*\` accepts trailing args. You can add it.
- **Shell pipes / redirects also ride along** — \`npm run test:e2e --workspace=crew-dashboard 2>&1 | tail -25\` still matches because the entry only constrains the leading bytes. Use them freely if helpful.
- **Don't wrap the command:** \`cd <dir> && …\`, \`sh -c "…"\`, and \`npm --prefix <dir> run …\` (instead of \`npm run …\`) all defeat the prefix match. If you need to switch directories, use the workspace flag instead.

A failed \`npm run test:e2e\` that produced \`ECONNREFUSED\` while the same flow worked via Playwright MCP is the signature of a wrapper-defeated match.


## Apply the fixes

- Update implementation and tests to address each point.
- After each meaningful unit of work, \`git add\` and commit with a clear message referencing KAN-23.
- Run \`npm run lint\`, \`npm run format\`, \`npm run typecheck\`, and \`npm run test:run\` — all must pass before pushing.
- Push with \`git push --force-with-lease origin KAN-23\` to extend the existing PR (unless Step 0 produced rebase-resolution commits — see the preamble's "do not push" override). Do NOT open a new PR. Plain \`--force\` is never allowed.
- If a piece of feedback is wrong or you disagree with it, write your reasoning back instead of blindly applying it.
- Do NOT resolve review threads on GitHub yourself.

## Final report

As your VERY LAST action, run a single Bash:

\`\`\`
echo "→ PR $(gh pr view --head KAN-23 --json url --jq .url)"
\`\`\`

Do not emit any further tool calls or prose after this. If you are aborting without pushing (e.g. unresolved disagreement, blocked by upstream), substitute:

\`\`\`
echo "→ no-pr: <one-line reason>"
\`\`\`
"
`;

exports[`buildFixPrPrompt > renders the bruno-smoke section when brunoSmoke is provided 1`] = `
"## Step 0: rebase onto \`origin/main\` (do this FIRST, before any feedback work)

Bring \`KAN-23\` up to date before applying review feedback:

\`\`\`
git fetch origin main
git rebase origin/main
\`\`\`

If the rebase is clean (no conflicts, or already up-to-date), continue to the feedback section below — Step 0 was a silent no-op.

If the rebase produces conflicts, follow these rules before going any further:

- Read each conflicting file. Use \`git log\` and \`git show\` if needed to understand both sides' intent. Discover the affected files via \`git status\`.
- Resolve each conflict preserving both sides' intent where they don't directly contradict.
- After resolving a file: \`git add <file>\`.
- When all conflicts in the current rebase step are resolved: \`git rebase --continue\`. Loop until the rebase finishes.
- Run \`npm run lint\`, \`npm run typecheck\`, \`npm run test:run\` — ALL must pass.
- If you are not confident in a resolution: \`git rebase --abort\`, document the blocker in \`docs/tickets/KAN-23.md\` "Open questions", and exit WITHOUT applying the review feedback.
- **If you resolved conflicts during this run, DO NOT push at the end** even if everything passes. The human must inspect the rebase resolution commits before they reach origin. After your feedback fixes are committed and verified, print exactly one line and exit: \`Rebase resolution + feedback ready for inspection — run 'git push --force-with-lease origin KAN-23' once you've reviewed.\`

## Step 0.5: bring up the environment (do this AFTER Step 0 succeeds)

Now that the source is current with \`origin/main\`, bring up the docker stack and any browser dependencies:

\`\`\`
docker compose up --build --wait
\`\`\`

If \`docker compose up\` fails for environmental reasons (host docker daemon down, port collision with another stack, missing CLI tools) — i.e., a failure that rebasing would not have fixed — abort with a clear message: document the blocker in \`docs/tickets/KAN-23.md\` "Open questions" and exit WITHOUT applying the review feedback. Do not push.

If \`docker compose\` itself returns a permission error — typically \`/var/run/docker.sock\` denied — that's a missing \`excludedCommands\` entry; see \`docs/plans/sandbox-limitations.md\`. Abort and ask the user to add the entry rather than trying to write the settings.json yourself.

**Do not reset the worktree or use any "hard" reset command** — those wipe in-progress work.

---

Code review feedback on the work you have already pushed for KAN-23.
Source: GitHub PR comments.

---

rename the field from x to y

---

## Skills

- **\`superpowers:test-driven-development\`** — for every feedback item that requires implementation work.
- **\`superpowers:verification-before-completion\`** — before pushing.
- **\`superpowers:systematic-debugging\`** — when something fails unexpectedly.
- **\`superpowers:requesting-code-review\`** — before pushing.


## API smoke verification (Bruno)

This project has a Bruno collection at \`bruno/\`. Crew already generated \`bruno/environments/recipes-kan-23.bru\` (pointing at **https://localhost:18443**) for the original run. \`CREW_BRUNO_ENV=recipes-kan-23\` is set in your env.

While applying feedback:

- If your fix touches any HTTP endpoint behaviour, update the matching \`bruno/endpoints/...\` and (where relevant) \`bruno/flows/...\` files in the same set of commits.
- Before pushing, run \`npm run bruno:smoke\`. Smoke must pass. A connection error usually means the worktree's stack isn't up — bring it up the same way the original \`crew run\` did, then re-run smoke.

Treat smoke failure the same as test failure: do not push.


## Sandboxed-curl is misleading

Your Bash tool runs in a sandbox with its own loopback, isolated from the host's. Direct \`curl\` / \`wget\` / Node \`fetch\` calls from your shell to **https://localhost:18443** will always return \`ECONNREFUSED\` — that is **not** evidence the stack is down. Crew has whitelisted \`npm run bruno:smoke\` to run un-sandboxed, and those are the only valid reachability tests for the docker stack.

If \`npm run bruno:smoke\` succeeds, that confirms the daemon is up — but it says nothing about the worktree app port. If \`npm run test:e2e\` fails with \`ECONNREFUSED\`, that's a real signal: the docker stack is not serving at the expected port. Investigate \`/tmp/crew-docker-KAN-23.log\` and consider running \`docker compose up --build --wait\` from the worktree to bring the stack back up.

## Excluded-command matching is form-sensitive

Crew's whitelisted commands (\`npm run bruno:smoke\`) match \`<repo>/.claude/settings.json\`'s \`excludedCommands\` entries by glob. Entries use the form \`command*\` (e.g. \`npm run test:e2e*\`) — a leading-substring match where \`*\` accepts zero-or-more trailing chars. **Wrappers that prepend other commands break the match,** in which case the command runs sandboxed and won't reach host loopback even though it looks like it should.

To stay matched:

- **Run the bare command:** \`npm run test:e2e\` (not \`cd packages/dashboard && npm run test:e2e\`).
- **The \`--workspace=crew-dashboard\` flag is covered by the glob** — \`command*\` accepts trailing args. You can add it.
- **Shell pipes / redirects also ride along** — \`npm run test:e2e --workspace=crew-dashboard 2>&1 | tail -25\` still matches because the entry only constrains the leading bytes. Use them freely if helpful.
- **Don't wrap the command:** \`cd <dir> && …\`, \`sh -c "…"\`, and \`npm --prefix <dir> run …\` (instead of \`npm run …\`) all defeat the prefix match. If you need to switch directories, use the workspace flag instead.

A failed \`npm run test:e2e\` that produced \`ECONNREFUSED\` while the same flow worked via Playwright MCP is the signature of a wrapper-defeated match.


## Apply the fixes

- Update implementation and tests to address each point.
- After each meaningful unit of work, \`git add\` and commit with a clear message referencing KAN-23.
- Run \`npm run lint\`, \`npm run format\`, \`npm run typecheck\`, and \`npm run test:run\` — all must pass before pushing.
- Push with \`git push --force-with-lease origin KAN-23\` to extend the existing PR (unless Step 0 produced rebase-resolution commits — see the preamble's "do not push" override). Do NOT open a new PR. Plain \`--force\` is never allowed.
- If a piece of feedback is wrong or you disagree with it, write your reasoning back instead of blindly applying it.
- Do NOT resolve review threads on GitHub yourself.

## Final report

As your VERY LAST action, run a single Bash:

\`\`\`
echo "→ PR $(gh pr view --head KAN-23 --json url --jq .url)"
\`\`\`

Do not emit any further tool calls or prose after this. If you are aborting without pushing (e.g. unresolved disagreement, blocked by upstream), substitute:

\`\`\`
echo "→ no-pr: <one-line reason>"
\`\`\`
"
`;

exports[`buildFixPrPrompt > renders the playwright block (smoke-only / no authored) 1`] = `
"## Step 0: rebase onto \`origin/main\` (do this FIRST, before any feedback work)

Bring \`KAN-23\` up to date before applying review feedback:

\`\`\`
git fetch origin main
git rebase origin/main
\`\`\`

If the rebase is clean (no conflicts, or already up-to-date), continue to the feedback section below — Step 0 was a silent no-op.

If the rebase produces conflicts, follow these rules before going any further:

- Read each conflicting file. Use \`git log\` and \`git show\` if needed to understand both sides' intent. Discover the affected files via \`git status\`.
- Resolve each conflict preserving both sides' intent where they don't directly contradict.
- After resolving a file: \`git add <file>\`.
- When all conflicts in the current rebase step are resolved: \`git rebase --continue\`. Loop until the rebase finishes.
- Run \`npm run lint\`, \`npm run typecheck\`, \`npm run test:run\` — ALL must pass.
- If you are not confident in a resolution: \`git rebase --abort\`, document the blocker in \`docs/tickets/KAN-23.md\` "Open questions", and exit WITHOUT applying the review feedback.
- **If you resolved conflicts during this run, DO NOT push at the end** even if everything passes. The human must inspect the rebase resolution commits before they reach origin. After your feedback fixes are committed and verified, print exactly one line and exit: \`Rebase resolution + feedback ready for inspection — run 'git push --force-with-lease origin KAN-23' once you've reviewed.\`

## Step 0.5: bring up the environment (do this AFTER Step 0 succeeds)

Now that the source is current with \`origin/main\`, bring up the docker stack and any browser dependencies:

\`\`\`
docker compose up --build --wait
\`\`\`

If \`docker compose up\` fails for environmental reasons (host docker daemon down, port collision with another stack, missing CLI tools) — i.e., a failure that rebasing would not have fixed — abort with a clear message: document the blocker in \`docs/tickets/KAN-23.md\` "Open questions" and exit WITHOUT applying the review feedback. Do not push.

If \`docker compose\` itself returns a permission error — typically \`/var/run/docker.sock\` denied — that's a missing \`excludedCommands\` entry; see \`docs/plans/sandbox-limitations.md\`. Abort and ask the user to add the entry rather than trying to write the settings.json yourself.

**Do not reset the worktree or use any "hard" reset command** — those wipe in-progress work.

---

Code review feedback on the work you have already pushed for KAN-23.
Source: stdin.

---

fix it

---

## Skills

- **\`superpowers:test-driven-development\`** — for every feedback item that requires implementation work.
- **\`superpowers:verification-before-completion\`** — before pushing.
- **\`superpowers:systematic-debugging\`** — when something fails unexpectedly.
- **\`superpowers:requesting-code-review\`** — before pushing.


## Playwright e2e in this worktree

Crew has prepared this worktree for Playwright runs:

- The application stack is running at **https://localhost:8443**.
- Chromium is installed (browser binary + system libs). \`process.env.CREW_APP_URL\` is set to the app URL.

**Two crew-managed concerns — do not duplicate:**

- **Do not run \`npm run docker:up\`.** The stack is already up.
- **Do not run \`npx playwright install\`.** Chromium is already installed.

If \`npm run test:e2e\` (or the project's equivalent) reports missing browsers, missing system libs, or "no app to test", surface the failure in your fix description and stop — that's a crew-setup gap, not your fault.



## Apply the fixes

- Update implementation and tests to address each point.
- After each meaningful unit of work, \`git add\` and commit with a clear message referencing KAN-23.
- Run \`npm run lint\`, \`npm run format\`, \`npm run typecheck\`, and \`npm run test:run\` — all must pass before pushing.
- Push with \`git push --force-with-lease origin KAN-23\` to extend the existing PR (unless Step 0 produced rebase-resolution commits — see the preamble's "do not push" override). Do NOT open a new PR. Plain \`--force\` is never allowed.
- If a piece of feedback is wrong or you disagree with it, write your reasoning back instead of blindly applying it.
- Do NOT resolve review threads on GitHub yourself.

## Final report

As your VERY LAST action, run a single Bash:

\`\`\`
echo "→ PR $(gh pr view --head KAN-23 --json url --jq .url)"
\`\`\`

Do not emit any further tool calls or prose after this. If you are aborting without pushing (e.g. unresolved disagreement, blocked by upstream), substitute:

\`\`\`
echo "→ no-pr: <one-line reason>"
\`\`\`
"
`;

exports[`buildTicketPrompt > PW-off snapshot still matches the CREW-19 baseline (no regression from CREW-20) 1`] = `
"You are running unattended on a fresh git worktree to implement Jira ticket KAN-23 end-to-end. The repo's \`CLAUDE.md\` is your authoritative project guide; read it before doing anything else.


## Skills

You are required to use these Superpowers skills as appropriate. Invoke each via the \`Skill\` tool when its trigger condition fires:

- **\`superpowers:executing-plans\`** — fires when a plan document exists at \`docs/plans/KAN-23-*.md\`, \`docs/superpowers/plans/KAN-23-*.md\`, or similar. If a plan exists, skip the inline-planning step and follow the plan task-by-task with the skill's checkpoint discipline.
- **\`superpowers:test-driven-development\`** — fires for every feature or bug fix you implement. Write the failing test first, watch it fail, then implement.
- **\`superpowers:verification-before-completion\`** — fires before claiming work is done, committing, or opening a PR. Required to run the verification commands and confirm output, not assume.
- **\`superpowers:systematic-debugging\`** — fires whenever you hit an unexpected failure (test red that you didn't write, type error you don't understand, runtime error). Don't guess at fixes; diagnose root causes.
- **\`superpowers:requesting-code-review\`** — fires as part of the Self-review step before pushing.

## Workflow

1. **Pull the ticket.** Use \`mcp__atlassian__jira_get_issue\` with key \`KAN-23\`. Note the \`issue_type.name\` and the current \`status.name\`.

2. **Epic guard.** If \`issue_type.name == "Epic"\`, do not implement. Find children via \`mcp__atlassian__jira_search\` with JQL \`parent = KAN-23\` (or \`"Epic Link" = KAN-23\` for older layouts), write a breakdown to \`docs/tickets/KAN-23.md\`, commit, and exit. Do not push.

3. **Move KAN-23 to "In Progress".** Use \`mcp__atlassian__jira_get_transitions\` and \`mcp__atlassian__jira_transition_issue\`. Bump the parent Epic from "To Do" to "In Progress" if applicable.

4. **Read context.** Skim \`CLAUDE.md\`, \`docs/plans/\`, and any related ticket files.

5. **Write the ticket file** at \`docs/tickets/KAN-23.md\` from \`docs/tickets/_template.md\` if one is needed for this ticket.

6. **Plan inline (or follow an existing plan).** If a plan doc exists, invoke \`superpowers:executing-plans\` and let the plan drive. Otherwise decompose into commit-shaped steps via \`TaskCreate\`.

7. **Execute, committing per step.** Use \`superpowers:test-driven-development\`. Frequent small commits referencing \`KAN-23\`.




8. **Verify.** Invoke \`superpowers:verification-before-completion\`. Run lint / format / typecheck / test:run.

9. **Self-review.** Invoke \`superpowers:requesting-code-review\`.

10. **Push and PR.**

    \`\`\`
    git push -u origin KAN-23
    gh pr create --base main --head KAN-23 --title "<title>" --body "<Summary + Test Plan>"
    \`\`\`

11. **Move KAN-23 to "In Review".**

12. **Final report.** As your VERY LAST action, run a single Bash:

    \`\`\`
    echo "→ PR $(gh pr view --head KAN-23 --json url --jq .url)"
    \`\`\`

    Do not emit any further tool calls or prose after this. If no PR was opened (epic guard, ticket already shipped, hard failure), substitute:

    \`\`\`
    echo "→ no-pr: <one-line reason>"
    \`\`\`

## Repo context

- GitHub: Safturento/Recipes
- Jira: https://safturento.atlassian.net
- Default branch: main

## Constraints

- Do not push to \`main\` or any branch other than \`KAN-23\`.
- No \`--no-verify\`, no plain \`--force\`. \`--force-with-lease\` allowed on \`KAN-23\` for rebases only.
- Do not write to \`.git\`, \`.claude\`, \`.husky\`, \`.vscode\`, \`.idea\`.
"
`;

exports[`buildTicketPrompt > appends the discoveredSkillsBlock after the curated bullets when populated 1`] = `
"You are running unattended on a fresh git worktree to implement Jira ticket KAN-23 end-to-end. The repo's \`CLAUDE.md\` is your authoritative project guide; read it before doing anything else.


## Skills

You are required to use these Superpowers skills as appropriate. Invoke each via the \`Skill\` tool when its trigger condition fires:

- **\`superpowers:executing-plans\`** — fires when a plan document exists at \`docs/plans/KAN-23-*.md\`, \`docs/superpowers/plans/KAN-23-*.md\`, or similar. If a plan exists, skip the inline-planning step and follow the plan task-by-task with the skill's checkpoint discipline.
- **\`superpowers:test-driven-development\`** — fires for every feature or bug fix you implement. Write the failing test first, watch it fail, then implement.
- **\`superpowers:verification-before-completion\`** — fires before claiming work is done, committing, or opening a PR. Required to run the verification commands and confirm output, not assume.
- **\`superpowers:systematic-debugging\`** — fires whenever you hit an unexpected failure (test red that you didn't write, type error you don't understand, runtime error). Don't guess at fixes; diagnose root causes.
- **\`superpowers:requesting-code-review\`** — fires as part of the Self-review step before pushing.

The following user-level skills are equally required when their description matches what you're about to do — invoke them via the \`Skill\` tool the same way:

- **\`reaching-for-backend-patterns\`** — Use when implementing Node backend code that handles HTTP requests.

## Workflow

1. **Pull the ticket.** Use \`mcp__atlassian__jira_get_issue\` with key \`KAN-23\`. Note the \`issue_type.name\` and the current \`status.name\`.

2. **Epic guard.** If \`issue_type.name == "Epic"\`, do not implement. Find children via \`mcp__atlassian__jira_search\` with JQL \`parent = KAN-23\` (or \`"Epic Link" = KAN-23\` for older layouts), write a breakdown to \`docs/tickets/KAN-23.md\`, commit, and exit. Do not push.

3. **Move KAN-23 to "In Progress".** Use \`mcp__atlassian__jira_get_transitions\` and \`mcp__atlassian__jira_transition_issue\`. Bump the parent Epic from "To Do" to "In Progress" if applicable.

4. **Read context.** Skim \`CLAUDE.md\`, \`docs/plans/\`, and any related ticket files.

5. **Write the ticket file** at \`docs/tickets/KAN-23.md\` from \`docs/tickets/_template.md\` if one is needed for this ticket.

6. **Plan inline (or follow an existing plan).** If a plan doc exists, invoke \`superpowers:executing-plans\` and let the plan drive. Otherwise decompose into commit-shaped steps via \`TaskCreate\`.

7. **Execute, committing per step.** Use \`superpowers:test-driven-development\`. Frequent small commits referencing \`KAN-23\`.




8. **Verify.** Invoke \`superpowers:verification-before-completion\`. Run lint / format / typecheck / test:run.

9. **Self-review.** Invoke \`superpowers:requesting-code-review\`.

10. **Push and PR.**

    \`\`\`
    git push -u origin KAN-23
    gh pr create --base main --head KAN-23 --title "<title>" --body "<Summary + Test Plan>"
    \`\`\`

11. **Move KAN-23 to "In Review".**

12. **Final report.** As your VERY LAST action, run a single Bash:

    \`\`\`
    echo "→ PR $(gh pr view --head KAN-23 --json url --jq .url)"
    \`\`\`

    Do not emit any further tool calls or prose after this. If no PR was opened (epic guard, ticket already shipped, hard failure), substitute:

    \`\`\`
    echo "→ no-pr: <one-line reason>"
    \`\`\`

## Repo context

- GitHub: Safturento/Recipes
- Jira: https://safturento.atlassian.net
- Default branch: main

## Constraints

- Do not push to \`main\` or any branch other than \`KAN-23\`.
- No \`--no-verify\`, no plain \`--force\`. \`--force-with-lease\` allowed on \`KAN-23\` for rebases only.
- Do not write to \`.git\`, \`.claude\`, \`.husky\`, \`.vscode\`, \`.idea\`.
"
`;

exports[`buildTicketPrompt > matches the baseline snapshot when playwright is omitted 1`] = `
"You are running unattended on a fresh git worktree to implement Jira ticket KAN-23 end-to-end. The repo's \`CLAUDE.md\` is your authoritative project guide; read it before doing anything else.


## Skills

You are required to use these Superpowers skills as appropriate. Invoke each via the \`Skill\` tool when its trigger condition fires:

- **\`superpowers:executing-plans\`** — fires when a plan document exists at \`docs/plans/KAN-23-*.md\`, \`docs/superpowers/plans/KAN-23-*.md\`, or similar. If a plan exists, skip the inline-planning step and follow the plan task-by-task with the skill's checkpoint discipline.
- **\`superpowers:test-driven-development\`** — fires for every feature or bug fix you implement. Write the failing test first, watch it fail, then implement.
- **\`superpowers:verification-before-completion\`** — fires before claiming work is done, committing, or opening a PR. Required to run the verification commands and confirm output, not assume.
- **\`superpowers:systematic-debugging\`** — fires whenever you hit an unexpected failure (test red that you didn't write, type error you don't understand, runtime error). Don't guess at fixes; diagnose root causes.
- **\`superpowers:requesting-code-review\`** — fires as part of the Self-review step before pushing.

## Workflow

1. **Pull the ticket.** Use \`mcp__atlassian__jira_get_issue\` with key \`KAN-23\`. Note the \`issue_type.name\` and the current \`status.name\`.

2. **Epic guard.** If \`issue_type.name == "Epic"\`, do not implement. Find children via \`mcp__atlassian__jira_search\` with JQL \`parent = KAN-23\` (or \`"Epic Link" = KAN-23\` for older layouts), write a breakdown to \`docs/tickets/KAN-23.md\`, commit, and exit. Do not push.

3. **Move KAN-23 to "In Progress".** Use \`mcp__atlassian__jira_get_transitions\` and \`mcp__atlassian__jira_transition_issue\`. Bump the parent Epic from "To Do" to "In Progress" if applicable.

4. **Read context.** Skim \`CLAUDE.md\`, \`docs/plans/\`, and any related ticket files.

5. **Write the ticket file** at \`docs/tickets/KAN-23.md\` from \`docs/tickets/_template.md\` if one is needed for this ticket.

6. **Plan inline (or follow an existing plan).** If a plan doc exists, invoke \`superpowers:executing-plans\` and let the plan drive. Otherwise decompose into commit-shaped steps via \`TaskCreate\`.

7. **Execute, committing per step.** Use \`superpowers:test-driven-development\`. Frequent small commits referencing \`KAN-23\`.




8. **Verify.** Invoke \`superpowers:verification-before-completion\`. Run lint / format / typecheck / test:run.

9. **Self-review.** Invoke \`superpowers:requesting-code-review\`.

10. **Push and PR.**

    \`\`\`
    git push -u origin KAN-23
    gh pr create --base main --head KAN-23 --title "<title>" --body "<Summary + Test Plan>"
    \`\`\`

11. **Move KAN-23 to "In Review".**

12. **Final report.** As your VERY LAST action, run a single Bash:

    \`\`\`
    echo "→ PR $(gh pr view --head KAN-23 --json url --jq .url)"
    \`\`\`

    Do not emit any further tool calls or prose after this. If no PR was opened (epic guard, ticket already shipped, hard failure), substitute:

    \`\`\`
    echo "→ no-pr: <one-line reason>"
    \`\`\`

## Repo context

- GitHub: Safturento/Recipes
- Jira: https://safturento.atlassian.net
- Default branch: main

## Constraints

- Do not push to \`main\` or any branch other than \`KAN-23\`.
- No \`--no-verify\`, no plain \`--force\`. \`--force-with-lease\` allowed on \`KAN-23\` for rebases only.
- Do not write to \`.git\`, \`.claude\`, \`.husky\`, \`.vscode\`, \`.idea\`.
"
`;

exports[`buildTicketPrompt > renders both playwright and bruno-smoke when both are provided 1`] = `
"You are running unattended on a fresh git worktree to implement Jira ticket KAN-23 end-to-end. The repo's \`CLAUDE.md\` is your authoritative project guide; read it before doing anything else.


## Skills

You are required to use these Superpowers skills as appropriate. Invoke each via the \`Skill\` tool when its trigger condition fires:

- **\`superpowers:executing-plans\`** — fires when a plan document exists at \`docs/plans/KAN-23-*.md\`, \`docs/superpowers/plans/KAN-23-*.md\`, or similar. If a plan exists, skip the inline-planning step and follow the plan task-by-task with the skill's checkpoint discipline.
- **\`superpowers:test-driven-development\`** — fires for every feature or bug fix you implement. Write the failing test first, watch it fail, then implement.
- **\`superpowers:verification-before-completion\`** — fires before claiming work is done, committing, or opening a PR. Required to run the verification commands and confirm output, not assume.
- **\`superpowers:systematic-debugging\`** — fires whenever you hit an unexpected failure (test red that you didn't write, type error you don't understand, runtime error). Don't guess at fixes; diagnose root causes.
- **\`superpowers:requesting-code-review\`** — fires as part of the Self-review step before pushing.

## Workflow

1. **Pull the ticket.** Use \`mcp__atlassian__jira_get_issue\` with key \`KAN-23\`. Note the \`issue_type.name\` and the current \`status.name\`.

2. **Epic guard.** If \`issue_type.name == "Epic"\`, do not implement. Find children via \`mcp__atlassian__jira_search\` with JQL \`parent = KAN-23\` (or \`"Epic Link" = KAN-23\` for older layouts), write a breakdown to \`docs/tickets/KAN-23.md\`, commit, and exit. Do not push.

3. **Move KAN-23 to "In Progress".** Use \`mcp__atlassian__jira_get_transitions\` and \`mcp__atlassian__jira_transition_issue\`. Bump the parent Epic from "To Do" to "In Progress" if applicable.

4. **Read context.** Skim \`CLAUDE.md\`, \`docs/plans/\`, and any related ticket files.

5. **Write the ticket file** at \`docs/tickets/KAN-23.md\` from \`docs/tickets/_template.md\` if one is needed for this ticket.

6. **Plan inline (or follow an existing plan).** If a plan doc exists, invoke \`superpowers:executing-plans\` and let the plan drive. Otherwise decompose into commit-shaped steps via \`TaskCreate\`.

7. **Execute, committing per step.** Use \`superpowers:test-driven-development\`. Frequent small commits referencing \`KAN-23\`.

## Visual smoke verification

This project's UI runs at **https://localhost:18443**. If your changes touch the frontend (any file under a frontend/dashboard package, anything that renders to a DOM, or a backend change a user can observe), you must verify the change end-to-end in a browser before claiming "Verify" complete.

1. Make sure the app is running. The docker stack is already running — verify with \`curl https://localhost:18443\` or just navigate.
2. Use the \`mcp__playwright__*\` tools to navigate to https://localhost:18443 and exercise the golden path you changed. Take a screenshot at the relevant state.
3. Inspect the screenshot. If the change is invisible or broken, return to step 7 (Execute) — it isn't done yet.

If your change is _clearly_ backend-only (no observable user effect), say so explicitly in the PR description and skip this step.


## API smoke verification (Bruno)

This project has a Bruno collection at \`bruno/\`. The worktree's API runs at **https://localhost:18443**, and crew has generated \`bruno/environments/recipes-kan-23.bru\` with \`baseUrl\` and a test user for you. The environment is exported as \`CREW_BRUNO_ENV=recipes-kan-23\` in your spawn env.

Two non-negotiable rules whenever this project's API is involved:

1. **Run the smoke flow as part of verification.** Before claiming "Verify" complete, run \`npm run bruno:smoke\` (the project's script reads \`CREW_BRUNO_ENV\` automatically). A non-zero exit means smoke failed — verification is **not** complete; loop back to step 7 (Execute).
2. **Update \`.bru\` files when endpoints change.** If you add, remove, or modify any HTTP endpoint, the same PR must add or update the matching \`bruno/endpoints/<route-group>/<verb>-<name>[-<case>].bru\` and \`bruno/flows/<flow>.bru\` files. Coverage drifts the moment a route changes without its \`.bru\`.

The \`bruno-collection-maintenance\` skill (auto-discovered) covers naming conventions, the \`vars:post-response\` patterns, and the conventions for \`flows/\` vs \`endpoints/\`.



## Sandboxed-curl is misleading

Your Bash tool runs in a sandbox with its own loopback, isolated from the host's. Direct \`curl\` / \`wget\` / Node \`fetch\` calls from your shell to **https://localhost:18443** will always return \`ECONNREFUSED\` — that is **not** evidence the stack is down. Crew has whitelisted \`npm run bruno:smoke\` to run un-sandboxed, and those are the only valid reachability tests for the docker stack.

If \`npm run bruno:smoke\` succeeds, that confirms the daemon is up — but it says nothing about the worktree app port. If \`npm run test:e2e\` fails with \`ECONNREFUSED\`, that's a real signal: the docker stack is not serving at the expected port. Investigate \`/tmp/crew-docker-KAN-23.log\` and consider running \`docker compose up --build --wait\` from the worktree to bring the stack back up.

## Excluded-command matching is form-sensitive

Crew's whitelisted commands (\`npm run bruno:smoke\`) match \`<repo>/.claude/settings.json\`'s \`excludedCommands\` entries by glob. Entries use the form \`command*\` (e.g. \`npm run test:e2e*\`) — a leading-substring match where \`*\` accepts zero-or-more trailing chars. **Wrappers that prepend other commands break the match,** in which case the command runs sandboxed and won't reach host loopback even though it looks like it should.

To stay matched:

- **Run the bare command:** \`npm run test:e2e\` (not \`cd packages/dashboard && npm run test:e2e\`).
- **The \`--workspace=crew-dashboard\` flag is covered by the glob** — \`command*\` accepts trailing args. You can add it.
- **Shell pipes / redirects also ride along** — \`npm run test:e2e --workspace=crew-dashboard 2>&1 | tail -25\` still matches because the entry only constrains the leading bytes. Use them freely if helpful.
- **Don't wrap the command:** \`cd <dir> && …\`, \`sh -c "…"\`, and \`npm --prefix <dir> run …\` (instead of \`npm run …\`) all defeat the prefix match. If you need to switch directories, use the workspace flag instead.

A failed \`npm run test:e2e\` that produced \`ECONNREFUSED\` while the same flow worked via Playwright MCP is the signature of a wrapper-defeated match.

8. **Verify.** Invoke \`superpowers:verification-before-completion\`. Run lint / format / typecheck / test:run.

9. **Self-review.** Invoke \`superpowers:requesting-code-review\`.

10. **Push and PR.**

    \`\`\`
    git push -u origin KAN-23
    gh pr create --base main --head KAN-23 --title "<title>" --body "<Summary + Test Plan>"
    \`\`\`

11. **Move KAN-23 to "In Review".**

12. **Final report.** As your VERY LAST action, run a single Bash:

    \`\`\`
    echo "→ PR $(gh pr view --head KAN-23 --json url --jq .url)"
    \`\`\`

    Do not emit any further tool calls or prose after this. If no PR was opened (epic guard, ticket already shipped, hard failure), substitute:

    \`\`\`
    echo "→ no-pr: <one-line reason>"
    \`\`\`

## Repo context

- GitHub: Safturento/Recipes
- Jira: https://safturento.atlassian.net
- Default branch: main

## Constraints

- Do not push to \`main\` or any branch other than \`KAN-23\`.
- No \`--no-verify\`, no plain \`--force\`. \`--force-with-lease\` allowed on \`KAN-23\` for rebases only.
- Do not write to \`.git\`, \`.claude\`, \`.husky\`, \`.vscode\`, \`.idea\`.
"
`;

exports[`buildTicketPrompt > renders the authored test section after the smoke section when both are provided 1`] = `
"You are running unattended on a fresh git worktree to implement Jira ticket KAN-23 end-to-end. The repo's \`CLAUDE.md\` is your authoritative project guide; read it before doing anything else.


## Skills

You are required to use these Superpowers skills as appropriate. Invoke each via the \`Skill\` tool when its trigger condition fires:

- **\`superpowers:executing-plans\`** — fires when a plan document exists at \`docs/plans/KAN-23-*.md\`, \`docs/superpowers/plans/KAN-23-*.md\`, or similar. If a plan exists, skip the inline-planning step and follow the plan task-by-task with the skill's checkpoint discipline.
- **\`superpowers:test-driven-development\`** — fires for every feature or bug fix you implement. Write the failing test first, watch it fail, then implement.
- **\`superpowers:verification-before-completion\`** — fires before claiming work is done, committing, or opening a PR. Required to run the verification commands and confirm output, not assume.
- **\`superpowers:systematic-debugging\`** — fires whenever you hit an unexpected failure (test red that you didn't write, type error you don't understand, runtime error). Don't guess at fixes; diagnose root causes.
- **\`superpowers:requesting-code-review\`** — fires as part of the Self-review step before pushing.

## Workflow

1. **Pull the ticket.** Use \`mcp__atlassian__jira_get_issue\` with key \`KAN-23\`. Note the \`issue_type.name\` and the current \`status.name\`.

2. **Epic guard.** If \`issue_type.name == "Epic"\`, do not implement. Find children via \`mcp__atlassian__jira_search\` with JQL \`parent = KAN-23\` (or \`"Epic Link" = KAN-23\` for older layouts), write a breakdown to \`docs/tickets/KAN-23.md\`, commit, and exit. Do not push.

3. **Move KAN-23 to "In Progress".** Use \`mcp__atlassian__jira_get_transitions\` and \`mcp__atlassian__jira_transition_issue\`. Bump the parent Epic from "To Do" to "In Progress" if applicable.

4. **Read context.** Skim \`CLAUDE.md\`, \`docs/plans/\`, and any related ticket files.

5. **Write the ticket file** at \`docs/tickets/KAN-23.md\` from \`docs/tickets/_template.md\` if one is needed for this ticket.

6. **Plan inline (or follow an existing plan).** If a plan doc exists, invoke \`superpowers:executing-plans\` and let the plan drive. Otherwise decompose into commit-shaped steps via \`TaskCreate\`.

7. **Execute, committing per step.** Use \`superpowers:test-driven-development\`. Frequent small commits referencing \`KAN-23\`.

## Visual smoke verification

This project's UI runs at **https://localhost:18443**. If your changes touch the frontend (any file under a frontend/dashboard package, anything that renders to a DOM, or a backend change a user can observe), you must verify the change end-to-end in a browser before claiming "Verify" complete.

1. Make sure the app is running. The docker stack is already running — verify with \`curl https://localhost:18443\` or just navigate.
2. Use the \`mcp__playwright__*\` tools to navigate to https://localhost:18443 and exercise the golden path you changed. Take a screenshot at the relevant state.
3. Inspect the screenshot. If the change is invisible or broken, return to step 7 (Execute) — it isn't done yet.

If your change is _clearly_ backend-only (no observable user effect), say so explicitly in the PR description and skip this step.

## Authored Playwright test

If the change has regression value (a user-facing flow that broke before or could break again), add a Playwright test:

- Tests live in **tests/e2e/**. Mirror existing files there for style.
- Run them with \`npm run test:e2e\`. If you authored a test, this command must exit 0 before "Verify".
- One test per behaviour, not per assertion. Names describe user intent.
- Don't add a test just because you can. Skip when the change is cosmetic, throwaway, or fully covered by existing unit tests.

**Two crew-managed concerns — do not duplicate:**

- **Do not run \`npm run docker:up\`.** Crew has the application stack running for you at https://localhost:18443. Running it again will conflict with the live containers.
- **Do not run \`npx playwright install\`.** Crew has installed Chromium for you before this run. If \`npm run test:e2e\` reports missing browsers or system libraries, surface the failure in the PR description and stop — that's a crew-setup gap, not your fault.

If \`tests/e2e/\` doesn't exist or \`npm run test:e2e\` fails for any other reason, also surface the problem in the PR description and do **not** silently skip.




## Sandboxed-curl is misleading

Your Bash tool runs in a sandbox with its own loopback, isolated from the host's. Direct \`curl\` / \`wget\` / Node \`fetch\` calls from your shell to **https://localhost:18443** will always return \`ECONNREFUSED\` — that is **not** evidence the stack is down. Crew has whitelisted \`npm run test:e2e\` to run un-sandboxed, and those are the only valid reachability tests for the docker stack.

If \`npm run bruno:smoke\` succeeds, that confirms the daemon is up — but it says nothing about the worktree app port. If \`npm run test:e2e\` fails with \`ECONNREFUSED\`, that's a real signal: the docker stack is not serving at the expected port. Investigate \`/tmp/crew-docker-KAN-23.log\` and consider running \`docker compose up --build --wait\` from the worktree to bring the stack back up.

## Excluded-command matching is form-sensitive

Crew's whitelisted commands (\`npm run test:e2e\`) match \`<repo>/.claude/settings.json\`'s \`excludedCommands\` entries by glob. Entries use the form \`command*\` (e.g. \`npm run test:e2e*\`) — a leading-substring match where \`*\` accepts zero-or-more trailing chars. **Wrappers that prepend other commands break the match,** in which case the command runs sandboxed and won't reach host loopback even though it looks like it should.

To stay matched:

- **Run the bare command:** \`npm run test:e2e\` (not \`cd packages/dashboard && npm run test:e2e\`).
- **The \`--workspace=crew-dashboard\` flag is covered by the glob** — \`command*\` accepts trailing args. You can add it.
- **Shell pipes / redirects also ride along** — \`npm run test:e2e --workspace=crew-dashboard 2>&1 | tail -25\` still matches because the entry only constrains the leading bytes. Use them freely if helpful.
- **Don't wrap the command:** \`cd <dir> && …\`, \`sh -c "…"\`, and \`npm --prefix <dir> run …\` (instead of \`npm run …\`) all defeat the prefix match. If you need to switch directories, use the workspace flag instead.

A failed \`npm run test:e2e\` that produced \`ECONNREFUSED\` while the same flow worked via Playwright MCP is the signature of a wrapper-defeated match.

8. **Verify.** Invoke \`superpowers:verification-before-completion\`. Run lint / format / typecheck / test:run.

9. **Self-review.** Invoke \`superpowers:requesting-code-review\`.

10. **Push and PR.**

    \`\`\`
    git push -u origin KAN-23
    gh pr create --base main --head KAN-23 --title "<title>" --body "<Summary + Test Plan>"
    \`\`\`

11. **Move KAN-23 to "In Review".**

12. **Final report.** As your VERY LAST action, run a single Bash:

    \`\`\`
    echo "→ PR $(gh pr view --head KAN-23 --json url --jq .url)"
    \`\`\`

    Do not emit any further tool calls or prose after this. If no PR was opened (epic guard, ticket already shipped, hard failure), substitute:

    \`\`\`
    echo "→ no-pr: <one-line reason>"
    \`\`\`

## Repo context

- GitHub: Safturento/Recipes
- Jira: https://safturento.atlassian.net
- Default branch: main

## Constraints

- Do not push to \`main\` or any branch other than \`KAN-23\`.
- No \`--no-verify\`, no plain \`--force\`. \`--force-with-lease\` allowed on \`KAN-23\` for rebases only.
- Do not write to \`.git\`, \`.claude\`, \`.husky\`, \`.vscode\`, \`.idea\`.
"
`;

exports[`buildTicketPrompt > renders the bruno-smoke section when brunoSmoke is provided (no smoke_user) 1`] = `
"You are running unattended on a fresh git worktree to implement Jira ticket KAN-23 end-to-end. The repo's \`CLAUDE.md\` is your authoritative project guide; read it before doing anything else.


## Skills

You are required to use these Superpowers skills as appropriate. Invoke each via the \`Skill\` tool when its trigger condition fires:

- **\`superpowers:executing-plans\`** — fires when a plan document exists at \`docs/plans/KAN-23-*.md\`, \`docs/superpowers/plans/KAN-23-*.md\`, or similar. If a plan exists, skip the inline-planning step and follow the plan task-by-task with the skill's checkpoint discipline.
- **\`superpowers:test-driven-development\`** — fires for every feature or bug fix you implement. Write the failing test first, watch it fail, then implement.
- **\`superpowers:verification-before-completion\`** — fires before claiming work is done, committing, or opening a PR. Required to run the verification commands and confirm output, not assume.
- **\`superpowers:systematic-debugging\`** — fires whenever you hit an unexpected failure (test red that you didn't write, type error you don't understand, runtime error). Don't guess at fixes; diagnose root causes.
- **\`superpowers:requesting-code-review\`** — fires as part of the Self-review step before pushing.

## Workflow

1. **Pull the ticket.** Use \`mcp__atlassian__jira_get_issue\` with key \`KAN-23\`. Note the \`issue_type.name\` and the current \`status.name\`.

2. **Epic guard.** If \`issue_type.name == "Epic"\`, do not implement. Find children via \`mcp__atlassian__jira_search\` with JQL \`parent = KAN-23\` (or \`"Epic Link" = KAN-23\` for older layouts), write a breakdown to \`docs/tickets/KAN-23.md\`, commit, and exit. Do not push.

3. **Move KAN-23 to "In Progress".** Use \`mcp__atlassian__jira_get_transitions\` and \`mcp__atlassian__jira_transition_issue\`. Bump the parent Epic from "To Do" to "In Progress" if applicable.

4. **Read context.** Skim \`CLAUDE.md\`, \`docs/plans/\`, and any related ticket files.

5. **Write the ticket file** at \`docs/tickets/KAN-23.md\` from \`docs/tickets/_template.md\` if one is needed for this ticket.

6. **Plan inline (or follow an existing plan).** If a plan doc exists, invoke \`superpowers:executing-plans\` and let the plan drive. Otherwise decompose into commit-shaped steps via \`TaskCreate\`.

7. **Execute, committing per step.** Use \`superpowers:test-driven-development\`. Frequent small commits referencing \`KAN-23\`.


## API smoke verification (Bruno)

This project has a Bruno collection at \`bruno/\`. The worktree's API runs at **https://localhost:18443**, and crew has generated \`bruno/environments/recipes-kan-23.bru\` with \`baseUrl\` for you. The environment is exported as \`CREW_BRUNO_ENV=recipes-kan-23\` in your spawn env.

Two non-negotiable rules whenever this project's API is involved:

1. **Run the smoke flow as part of verification.** Before claiming "Verify" complete, run \`npm run bruno:smoke\` (the project's script reads \`CREW_BRUNO_ENV\` automatically). A non-zero exit means smoke failed — verification is **not** complete; loop back to step 7 (Execute).
2. **Update \`.bru\` files when endpoints change.** If you add, remove, or modify any HTTP endpoint, the same PR must add or update the matching \`bruno/endpoints/<route-group>/<verb>-<name>[-<case>].bru\` and \`bruno/flows/<flow>.bru\` files. Coverage drifts the moment a route changes without its \`.bru\`.

The \`bruno-collection-maintenance\` skill (auto-discovered) covers naming conventions, the \`vars:post-response\` patterns, and the conventions for \`flows/\` vs \`endpoints/\`.



## Sandboxed-curl is misleading

Your Bash tool runs in a sandbox with its own loopback, isolated from the host's. Direct \`curl\` / \`wget\` / Node \`fetch\` calls from your shell to **https://localhost:18443** will always return \`ECONNREFUSED\` — that is **not** evidence the stack is down. Crew has whitelisted \`npm run bruno:smoke\` to run un-sandboxed, and those are the only valid reachability tests for the docker stack.

If \`npm run bruno:smoke\` succeeds, that confirms the daemon is up — but it says nothing about the worktree app port. If \`npm run test:e2e\` fails with \`ECONNREFUSED\`, that's a real signal: the docker stack is not serving at the expected port. Investigate \`/tmp/crew-docker-KAN-23.log\` and consider running \`docker compose up --build --wait\` from the worktree to bring the stack back up.

## Excluded-command matching is form-sensitive

Crew's whitelisted commands (\`npm run bruno:smoke\`) match \`<repo>/.claude/settings.json\`'s \`excludedCommands\` entries by glob. Entries use the form \`command*\` (e.g. \`npm run test:e2e*\`) — a leading-substring match where \`*\` accepts zero-or-more trailing chars. **Wrappers that prepend other commands break the match,** in which case the command runs sandboxed and won't reach host loopback even though it looks like it should.

To stay matched:

- **Run the bare command:** \`npm run test:e2e\` (not \`cd packages/dashboard && npm run test:e2e\`).
- **The \`--workspace=crew-dashboard\` flag is covered by the glob** — \`command*\` accepts trailing args. You can add it.
- **Shell pipes / redirects also ride along** — \`npm run test:e2e --workspace=crew-dashboard 2>&1 | tail -25\` still matches because the entry only constrains the leading bytes. Use them freely if helpful.
- **Don't wrap the command:** \`cd <dir> && …\`, \`sh -c "…"\`, and \`npm --prefix <dir> run …\` (instead of \`npm run …\`) all defeat the prefix match. If you need to switch directories, use the workspace flag instead.

A failed \`npm run test:e2e\` that produced \`ECONNREFUSED\` while the same flow worked via Playwright MCP is the signature of a wrapper-defeated match.

8. **Verify.** Invoke \`superpowers:verification-before-completion\`. Run lint / format / typecheck / test:run.

9. **Self-review.** Invoke \`superpowers:requesting-code-review\`.

10. **Push and PR.**

    \`\`\`
    git push -u origin KAN-23
    gh pr create --base main --head KAN-23 --title "<title>" --body "<Summary + Test Plan>"
    \`\`\`

11. **Move KAN-23 to "In Review".**

12. **Final report.** As your VERY LAST action, run a single Bash:

    \`\`\`
    echo "→ PR $(gh pr view --head KAN-23 --json url --jq .url)"
    \`\`\`

    Do not emit any further tool calls or prose after this. If no PR was opened (epic guard, ticket already shipped, hard failure), substitute:

    \`\`\`
    echo "→ no-pr: <one-line reason>"
    \`\`\`

## Repo context

- GitHub: Safturento/Recipes
- Jira: https://safturento.atlassian.net
- Default branch: main

## Constraints

- Do not push to \`main\` or any branch other than \`KAN-23\`.
- No \`--no-verify\`, no plain \`--force\`. \`--force-with-lease\` allowed on \`KAN-23\` for rebases only.
- Do not write to \`.git\`, \`.claude\`, \`.husky\`, \`.vscode\`, \`.idea\`.
"
`;

exports[`buildTicketPrompt > renders the smoke verification section when playwright.smoke is provided (docker case) 1`] = `
"You are running unattended on a fresh git worktree to implement Jira ticket KAN-23 end-to-end. The repo's \`CLAUDE.md\` is your authoritative project guide; read it before doing anything else.


## Skills

You are required to use these Superpowers skills as appropriate. Invoke each via the \`Skill\` tool when its trigger condition fires:

- **\`superpowers:executing-plans\`** — fires when a plan document exists at \`docs/plans/KAN-23-*.md\`, \`docs/superpowers/plans/KAN-23-*.md\`, or similar. If a plan exists, skip the inline-planning step and follow the plan task-by-task with the skill's checkpoint discipline.
- **\`superpowers:test-driven-development\`** — fires for every feature or bug fix you implement. Write the failing test first, watch it fail, then implement.
- **\`superpowers:verification-before-completion\`** — fires before claiming work is done, committing, or opening a PR. Required to run the verification commands and confirm output, not assume.
- **\`superpowers:systematic-debugging\`** — fires whenever you hit an unexpected failure (test red that you didn't write, type error you don't understand, runtime error). Don't guess at fixes; diagnose root causes.
- **\`superpowers:requesting-code-review\`** — fires as part of the Self-review step before pushing.

## Workflow

1. **Pull the ticket.** Use \`mcp__atlassian__jira_get_issue\` with key \`KAN-23\`. Note the \`issue_type.name\` and the current \`status.name\`.

2. **Epic guard.** If \`issue_type.name == "Epic"\`, do not implement. Find children via \`mcp__atlassian__jira_search\` with JQL \`parent = KAN-23\` (or \`"Epic Link" = KAN-23\` for older layouts), write a breakdown to \`docs/tickets/KAN-23.md\`, commit, and exit. Do not push.

3. **Move KAN-23 to "In Progress".** Use \`mcp__atlassian__jira_get_transitions\` and \`mcp__atlassian__jira_transition_issue\`. Bump the parent Epic from "To Do" to "In Progress" if applicable.

4. **Read context.** Skim \`CLAUDE.md\`, \`docs/plans/\`, and any related ticket files.

5. **Write the ticket file** at \`docs/tickets/KAN-23.md\` from \`docs/tickets/_template.md\` if one is needed for this ticket.

6. **Plan inline (or follow an existing plan).** If a plan doc exists, invoke \`superpowers:executing-plans\` and let the plan drive. Otherwise decompose into commit-shaped steps via \`TaskCreate\`.

7. **Execute, committing per step.** Use \`superpowers:test-driven-development\`. Frequent small commits referencing \`KAN-23\`.

## Visual smoke verification

This project's UI runs at **https://localhost:18443**. If your changes touch the frontend (any file under a frontend/dashboard package, anything that renders to a DOM, or a backend change a user can observe), you must verify the change end-to-end in a browser before claiming "Verify" complete.

1. Make sure the app is running. The docker stack is already running — verify with \`curl https://localhost:18443\` or just navigate.
2. Use the \`mcp__playwright__*\` tools to navigate to https://localhost:18443 and exercise the golden path you changed. Take a screenshot at the relevant state.
3. Inspect the screenshot. If the change is invisible or broken, return to step 7 (Execute) — it isn't done yet.

If your change is _clearly_ backend-only (no observable user effect), say so explicitly in the PR description and skip this step.




8. **Verify.** Invoke \`superpowers:verification-before-completion\`. Run lint / format / typecheck / test:run.

9. **Self-review.** Invoke \`superpowers:requesting-code-review\`.

10. **Push and PR.**

    \`\`\`
    git push -u origin KAN-23
    gh pr create --base main --head KAN-23 --title "<title>" --body "<Summary + Test Plan>"
    \`\`\`

11. **Move KAN-23 to "In Review".**

12. **Final report.** As your VERY LAST action, run a single Bash:

    \`\`\`
    echo "→ PR $(gh pr view --head KAN-23 --json url --jq .url)"
    \`\`\`

    Do not emit any further tool calls or prose after this. If no PR was opened (epic guard, ticket already shipped, hard failure), substitute:

    \`\`\`
    echo "→ no-pr: <one-line reason>"
    \`\`\`

## Repo context

- GitHub: Safturento/Recipes
- Jira: https://safturento.atlassian.net
- Default branch: main

## Constraints

- Do not push to \`main\` or any branch other than \`KAN-23\`.
- No \`--no-verify\`, no plain \`--force\`. \`--force-with-lease\` allowed on \`KAN-23\` for rebases only.
- Do not write to \`.git\`, \`.claude\`, \`.husky\`, \`.vscode\`, \`.idea\`.
"
`;

exports[`buildTicketPrompt > renders the smoke verification section with start_command hint (non-docker case) 1`] = `
"You are running unattended on a fresh git worktree to implement Jira ticket CREW-99 end-to-end. The repo's \`CLAUDE.md\` is your authoritative project guide; read it before doing anything else.


## Skills

You are required to use these Superpowers skills as appropriate. Invoke each via the \`Skill\` tool when its trigger condition fires:

- **\`superpowers:executing-plans\`** — fires when a plan document exists at \`docs/plans/CREW-99-*.md\`, \`docs/superpowers/plans/CREW-99-*.md\`, or similar. If a plan exists, skip the inline-planning step and follow the plan task-by-task with the skill's checkpoint discipline.
- **\`superpowers:test-driven-development\`** — fires for every feature or bug fix you implement. Write the failing test first, watch it fail, then implement.
- **\`superpowers:verification-before-completion\`** — fires before claiming work is done, committing, or opening a PR. Required to run the verification commands and confirm output, not assume.
- **\`superpowers:systematic-debugging\`** — fires whenever you hit an unexpected failure (test red that you didn't write, type error you don't understand, runtime error). Don't guess at fixes; diagnose root causes.
- **\`superpowers:requesting-code-review\`** — fires as part of the Self-review step before pushing.

## Workflow

1. **Pull the ticket.** Use \`mcp__atlassian__jira_get_issue\` with key \`CREW-99\`. Note the \`issue_type.name\` and the current \`status.name\`.

2. **Epic guard.** If \`issue_type.name == "Epic"\`, do not implement. Find children via \`mcp__atlassian__jira_search\` with JQL \`parent = CREW-99\` (or \`"Epic Link" = CREW-99\` for older layouts), write a breakdown to \`docs/tickets/CREW-99.md\`, commit, and exit. Do not push.

3. **Move CREW-99 to "In Progress".** Use \`mcp__atlassian__jira_get_transitions\` and \`mcp__atlassian__jira_transition_issue\`. Bump the parent Epic from "To Do" to "In Progress" if applicable.

4. **Read context.** Skim \`CLAUDE.md\`, \`docs/plans/\`, and any related ticket files.

5. **Write the ticket file** at \`docs/tickets/CREW-99.md\` from \`docs/tickets/_template.md\` if one is needed for this ticket.

6. **Plan inline (or follow an existing plan).** If a plan doc exists, invoke \`superpowers:executing-plans\` and let the plan drive. Otherwise decompose into commit-shaped steps via \`TaskCreate\`.

7. **Execute, committing per step.** Use \`superpowers:test-driven-development\`. Frequent small commits referencing \`CREW-99\`.

## Visual smoke verification

This project's UI runs at **http://localhost:5173**. If your changes touch the frontend (any file under a frontend/dashboard package, anything that renders to a DOM, or a backend change a user can observe), you must verify the change end-to-end in a browser before claiming "Verify" complete.

1. Make sure the app is running. Run \`npm run dev --workspace=crew-dashboard\` in the worktree. Wait for the dev server to be reachable, then proceed.
2. Use the \`mcp__playwright__*\` tools to navigate to http://localhost:5173 and exercise the golden path you changed. Take a screenshot at the relevant state.
3. Inspect the screenshot. If the change is invisible or broken, return to step 7 (Execute) — it isn't done yet.

If your change is _clearly_ backend-only (no observable user effect), say so explicitly in the PR description and skip this step.




8. **Verify.** Invoke \`superpowers:verification-before-completion\`. Run lint / format / typecheck / test:run.

9. **Self-review.** Invoke \`superpowers:requesting-code-review\`.

10. **Push and PR.**

    \`\`\`
    git push -u origin CREW-99
    gh pr create --base main --head CREW-99 --title "<title>" --body "<Summary + Test Plan>"
    \`\`\`

11. **Move CREW-99 to "In Review".**

12. **Final report.** As your VERY LAST action, run a single Bash:

    \`\`\`
    echo "→ PR $(gh pr view --head CREW-99 --json url --jq .url)"
    \`\`\`

    Do not emit any further tool calls or prose after this. If no PR was opened (epic guard, ticket already shipped, hard failure), substitute:

    \`\`\`
    echo "→ no-pr: <one-line reason>"
    \`\`\`

## Repo context

- GitHub: Safturento/crew
- Jira: https://safturento.atlassian.net
- Default branch: main

## Constraints

- Do not push to \`main\` or any branch other than \`CREW-99\`.
- No \`--no-verify\`, no plain \`--force\`. \`--force-with-lease\` allowed on \`CREW-99\` for rebases only.
- Do not write to \`.git\`, \`.claude\`, \`.husky\`, \`.vscode\`, \`.idea\`.
"
`;

exports[`buildTicketPrompt > renders the testUser clause when hasSmokeUser is true 1`] = `
"You are running unattended on a fresh git worktree to implement Jira ticket KAN-23 end-to-end. The repo's \`CLAUDE.md\` is your authoritative project guide; read it before doing anything else.


## Skills

You are required to use these Superpowers skills as appropriate. Invoke each via the \`Skill\` tool when its trigger condition fires:

- **\`superpowers:executing-plans\`** — fires when a plan document exists at \`docs/plans/KAN-23-*.md\`, \`docs/superpowers/plans/KAN-23-*.md\`, or similar. If a plan exists, skip the inline-planning step and follow the plan task-by-task with the skill's checkpoint discipline.
- **\`superpowers:test-driven-development\`** — fires for every feature or bug fix you implement. Write the failing test first, watch it fail, then implement.
- **\`superpowers:verification-before-completion\`** — fires before claiming work is done, committing, or opening a PR. Required to run the verification commands and confirm output, not assume.
- **\`superpowers:systematic-debugging\`** — fires whenever you hit an unexpected failure (test red that you didn't write, type error you don't understand, runtime error). Don't guess at fixes; diagnose root causes.
- **\`superpowers:requesting-code-review\`** — fires as part of the Self-review step before pushing.

## Workflow

1. **Pull the ticket.** Use \`mcp__atlassian__jira_get_issue\` with key \`KAN-23\`. Note the \`issue_type.name\` and the current \`status.name\`.

2. **Epic guard.** If \`issue_type.name == "Epic"\`, do not implement. Find children via \`mcp__atlassian__jira_search\` with JQL \`parent = KAN-23\` (or \`"Epic Link" = KAN-23\` for older layouts), write a breakdown to \`docs/tickets/KAN-23.md\`, commit, and exit. Do not push.

3. **Move KAN-23 to "In Progress".** Use \`mcp__atlassian__jira_get_transitions\` and \`mcp__atlassian__jira_transition_issue\`. Bump the parent Epic from "To Do" to "In Progress" if applicable.

4. **Read context.** Skim \`CLAUDE.md\`, \`docs/plans/\`, and any related ticket files.

5. **Write the ticket file** at \`docs/tickets/KAN-23.md\` from \`docs/tickets/_template.md\` if one is needed for this ticket.

6. **Plan inline (or follow an existing plan).** If a plan doc exists, invoke \`superpowers:executing-plans\` and let the plan drive. Otherwise decompose into commit-shaped steps via \`TaskCreate\`.

7. **Execute, committing per step.** Use \`superpowers:test-driven-development\`. Frequent small commits referencing \`KAN-23\`.


## API smoke verification (Bruno)

This project has a Bruno collection at \`bruno/\`. The worktree's API runs at **https://localhost:18443**, and crew has generated \`bruno/environments/recipes-kan-23.bru\` with \`baseUrl\` and a test user for you. The environment is exported as \`CREW_BRUNO_ENV=recipes-kan-23\` in your spawn env.

Two non-negotiable rules whenever this project's API is involved:

1. **Run the smoke flow as part of verification.** Before claiming "Verify" complete, run \`npm run bruno:smoke\` (the project's script reads \`CREW_BRUNO_ENV\` automatically). A non-zero exit means smoke failed — verification is **not** complete; loop back to step 7 (Execute).
2. **Update \`.bru\` files when endpoints change.** If you add, remove, or modify any HTTP endpoint, the same PR must add or update the matching \`bruno/endpoints/<route-group>/<verb>-<name>[-<case>].bru\` and \`bruno/flows/<flow>.bru\` files. Coverage drifts the moment a route changes without its \`.bru\`.

The \`bruno-collection-maintenance\` skill (auto-discovered) covers naming conventions, the \`vars:post-response\` patterns, and the conventions for \`flows/\` vs \`endpoints/\`.



## Sandboxed-curl is misleading

Your Bash tool runs in a sandbox with its own loopback, isolated from the host's. Direct \`curl\` / \`wget\` / Node \`fetch\` calls from your shell to **https://localhost:18443** will always return \`ECONNREFUSED\` — that is **not** evidence the stack is down. Crew has whitelisted \`npm run bruno:smoke\` to run un-sandboxed, and those are the only valid reachability tests for the docker stack.

If \`npm run bruno:smoke\` succeeds, that confirms the daemon is up — but it says nothing about the worktree app port. If \`npm run test:e2e\` fails with \`ECONNREFUSED\`, that's a real signal: the docker stack is not serving at the expected port. Investigate \`/tmp/crew-docker-KAN-23.log\` and consider running \`docker compose up --build --wait\` from the worktree to bring the stack back up.

## Excluded-command matching is form-sensitive

Crew's whitelisted commands (\`npm run bruno:smoke\`) match \`<repo>/.claude/settings.json\`'s \`excludedCommands\` entries by glob. Entries use the form \`command*\` (e.g. \`npm run test:e2e*\`) — a leading-substring match where \`*\` accepts zero-or-more trailing chars. **Wrappers that prepend other commands break the match,** in which case the command runs sandboxed and won't reach host loopback even though it looks like it should.

To stay matched:

- **Run the bare command:** \`npm run test:e2e\` (not \`cd packages/dashboard && npm run test:e2e\`).
- **The \`--workspace=crew-dashboard\` flag is covered by the glob** — \`command*\` accepts trailing args. You can add it.
- **Shell pipes / redirects also ride along** — \`npm run test:e2e --workspace=crew-dashboard 2>&1 | tail -25\` still matches because the entry only constrains the leading bytes. Use them freely if helpful.
- **Don't wrap the command:** \`cd <dir> && …\`, \`sh -c "…"\`, and \`npm --prefix <dir> run …\` (instead of \`npm run …\`) all defeat the prefix match. If you need to switch directories, use the workspace flag instead.

A failed \`npm run test:e2e\` that produced \`ECONNREFUSED\` while the same flow worked via Playwright MCP is the signature of a wrapper-defeated match.

8. **Verify.** Invoke \`superpowers:verification-before-completion\`. Run lint / format / typecheck / test:run.

9. **Self-review.** Invoke \`superpowers:requesting-code-review\`.

10. **Push and PR.**

    \`\`\`
    git push -u origin KAN-23
    gh pr create --base main --head KAN-23 --title "<title>" --body "<Summary + Test Plan>"
    \`\`\`

11. **Move KAN-23 to "In Review".**

12. **Final report.** As your VERY LAST action, run a single Bash:

    \`\`\`
    echo "→ PR $(gh pr view --head KAN-23 --json url --jq .url)"
    \`\`\`

    Do not emit any further tool calls or prose after this. If no PR was opened (epic guard, ticket already shipped, hard failure), substitute:

    \`\`\`
    echo "→ no-pr: <one-line reason>"
    \`\`\`

## Repo context

- GitHub: Safturento/Recipes
- Jira: https://safturento.atlassian.net
- Default branch: main

## Constraints

- Do not push to \`main\` or any branch other than \`KAN-23\`.
- No \`--no-verify\`, no plain \`--force\`. \`--force-with-lease\` allowed on \`KAN-23\` for rebases only.
- Do not write to \`.git\`, \`.claude\`, \`.husky\`, \`.vscode\`, \`.idea\`.
"
`;
